# grilo

./: .editorconfig  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  AUTHORS  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  grilo-0.1-uninstalled.pc.in  grilo-0.1.pc.in  grilo-0.2.pc.in  grilo-0.3.pc.in  grilo-net-0.2.pc.in  grilo-net-0.3.pc.in  grilo-net-uninstalled.pc.in  grilo-pls-0.2.pc.in  grilo-pls-0.3.pc.in  grilo-pls-uninstalled.pc.in  grilo-uninstalled.pc.in  grilo.doap  grilo.spec.in  grl-inspect.1  grl-launch-0.2.1  grl-launch-0.3.1  media-store-0.1-uninstalled.pc.in  media-store-0.1.pc.in  media-store-uninstalled.pc.in  meson.build  meson_options.txt  release.mk
bindings/: Makefile.am  meson.build
bindings/vala/: Grl-0.2.metadata  GrlNet-0.3.metadata  Makefile.am  grilo-0.1-custom.vala  grilo-0.1.metadata  grilo-0.1.vapi  grilo-0.2-custom.vala  grilo-0.2.metadata  grilo-0.3-custom.vala  grilo-0.3.vapi  grilo-net-0.2.metadata  grilo-net-0.3-custom.vala  grilo-net-uninstalled.files.in  grilo-net-uninstalled.namespace.in  grilo-uninstalled.defines  grilo-uninstalled.files.in  media-store-0.1.vapi  meson.build
bindings/vala/grilo-0.1/: grilo-0.1-custom.vala  grilo-0.1.files  grilo-0.1.gi  grilo-0.1.metadata  grilo-0.1.namespace
bindings/vala/media-store-0.1/: media-store-0.1.files  media-store-0.1.gi
debian/: changelog  control  control.in  copyright  gir1.0-grilo-0.1.install  grilo-0.1-tools.install  libgrilo-0.1-dev.install.in  libgrilo-0.1-doc.install.in  libgrilo-0.1-doc.links.in  libgrilo-0.1-vala.install.in  libgrilo-0.1.install.in  rules
doc/: Makefile.am  meson.build
doc/brainstorming/: itoral-initial-brainstorming.txt  jasuarez-initial-brainstorming.txt  to-be-discussed.txt
doc/grilo/: Makefile.am  environment-setup.xml  grilo-docs.sgml  grilo-sections.txt  grilo.types  meson.build  overview.xml  plugins-media-sources.xml  plugins-metadata-sources.xml  plugins-sources.xml  plugins-testing.xml  quick-start-using-grilo.xml  quick-start.xml  writing-apps.xml
doc/libs/: Makefile.am  grilo-libs-docs.sgml  grilo-libs-sections.txt
doc/man/: Makefile.am  grilo-test-ui-0.3.1  grl-inspect-0.3.1  grl-launch-0.3.1  meson.build
doc/reference/: .gitignore  Makefile.am  grilo-docs.sgml  grilo-sections.txt  grilo.types  quick-start-using-grilo.xml
examples/: Makefile.am  browsing-pls.c  browsing.c  configuring-plugins.c  efficient-metadata-resolution.c  loading-plugins.c  meson.build  multivalues.c  searching.c
libs/: Makefile.am  meson.build
libs/net/: Makefile.am  grl-net-mock-private.h  grl-net-mock.c  grl-net-mock.h  grl-net-private.c  grl-net-private.h  grl-net-soup-stable.c  grl-net-soup-unstable.c  grl-net-wc-private.h  grl-net-wc.c  grl-net-wc.h  grl-net.h  meson.build  wc-test.c
libs/pls/: Makefile.am  grl-pls.c  grl-pls.h  meson.build
po/: LINGUAS  POTFILES.in  ab.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  kw.po  lo.po  lt.po  lv.po  meson.build  ml.po  ms.po  nb.po  (+22 more)
src/: .gitignore  Makefile.am  content.c  content.h  grilo.c  grilo.h  grl-caps.c  grl-caps.h  grl-definitions.h  grl-error.h  grl-log-priv.h  grl-log.c  grl-log.h  grl-marshal.list  grl-media-plugin-priv.h  grl-media-plugin.c  grl-media-plugin.h  grl-media-source-priv.h  grl-media-source.c  grl-media-source.h  grl-metadata-key-priv.h  grl-metadata-key.c  grl-metadata-key.h  grl-metadata-source-priv.h  grl-metadata-source.c  grl-metadata-source.h  grl-multiple.c  grl-multiple.h  grl-operation-options-priv.h  grl-operation-options.c  grl-operation-options.h  grl-operation-priv.h  grl-operation.c  grl-operation.h  grl-plugin-priv.h  grl-plugin-registry-priv.h  grl-plugin-registry.c  grl-plugin-registry.h  grl-plugin.c  grl-plugin.h  (+43 more)
src/content/: Makefile.am  content-media.c  content-media.h  content.c  content.h  grl-content-audio.c  grl-content-audio.h  grl-content-box.c  grl-content-box.h  grl-content-config.c  grl-content-config.h  grl-content-image.c  grl-content-image.h  grl-content-media.c  grl-content-media.h  grl-content-video.c  grl-content-video.h  grl-content.c  grl-content.h  ms-content-audio.c  ms-content-audio.h  ms-content-box.c  ms-content-box.h  ms-content-image.c  ms-content-image.h  ms-content-media.c  ms-content-media.h  ms-content-video.c  ms-content-video.h  ms-content.c  ms-content.h
src/data/: Makefile.am  grl-config.c  grl-config.h  grl-data-audio.c  grl-data-audio.h  grl-data-box.c  grl-data-box.h  grl-data-config.c  grl-data-config.h  grl-data-image.c  grl-data-image.h  grl-data-media.c  grl-data-media.h  grl-data-video.c  grl-data-video.h  grl-data.c  grl-data.h  grl-media-audio.c  grl-media-audio.h  grl-media-box.c  grl-media-box.h  grl-media-image.c  grl-media-image.h  grl-media-video.c  grl-media-video.h  grl-media.c  grl-media.h  grl-related-keys.c  grl-related-keys.h
src/tests/: .gitignore  Makefile.am  registry.c
tests/: .gitignore  Makefile.am  autoptr.c  lib-net.c  media.c  meson.build  metadata_source.c  operations.c  registry.c
tests/python/: Makefile.am  test_fs.py  test_media.py  test_metadata_source.py  test_net.py  test_options.py  test_plugin.py  test_registry.py  testrunner.py  util.py.in
tools/: Makefile.am  meson.build
tools/grilo-inspect/: .gitignore  Makefile.am  generate_core_keys.py  grl-inspect.c  meson.build
tools/grilo-launch/: Makefile.am  grl-launch.c  meson.build
tools/grilo-test-ui/: .gitignore  Makefile.am  flickr-auth.c  flickr-auth.h  flickr-oauth.c  flickr-oauth.h  main.c  meson.build
tools/js/: grl-inspect.js  testGrilo.js
tools/python/: grilo-test-ui.py
tools/test-ui/: Makefile.am  TODO  main.c
tools/vala/: Makefile.am  grilo-test.vala
